force-app/main/default/objects/Vehicle_Service_Package_Item__c/Vehicle_Service_Package_Item__c.object-meta.xml
<CustomObject>
    <description>Vehicle Service package line items are details of vehicle service packages, a clone of items in the service package. The records in this object are created by a flow: &apos;Create Vehicle Service Package Item&apos; when a vehicle Service Pacgake Record is created.

Created By: Neha Aggrawal
Created Date: 16/12/2020
User Story: Gd-1224
Purpose :- After Sales service available of Customer.</description>
    <label>Vehicle Service Package Item</label>
    <nameField>
        <label>Vehicle Service Package Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Service Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>