force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/DiscountAmounts__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmounts__c</fullName>
    <label>Discount Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>