force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/DiscountRates__c.field-meta.xml
<CustomField>
    <fullName>DiscountRates__c</fullName>
    <label>Discount Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>