force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/DuplicatedUse__c.field-meta.xml
<CustomField>
    <fullName>DuplicatedUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicated Use</label>
    <type>Checkbox</type>
</CustomField>