force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>End Date</label>
    <type>Date</type>
</CustomField>