force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>RepairPackage</fullName>
                <label>Repair Package</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>