force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/MOD_DT__c.field-meta.xml
<CustomField>
    <fullName>MOD_DT__c</fullName>
    <label>LAST MODIFIED DATE</label>
    <type>DateTime</type>
</CustomField>