force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/MONTH_LIMIT_TO__c.field-meta.xml
<CustomField>
    <fullName>MONTH_LIMIT_TO__c</fullName>
    <label>MONTH LIMIT - TO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>