force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/ODMT_TYP__c.field-meta.xml
<CustomField>
    <fullName>ODMT_TYP__c</fullName>
    <label>Distance Driven Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>