force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/ODOMETER_LIMIT_TO__c.field-meta.xml
<CustomField>
    <fullName>ODOMETER_LIMIT_TO__c</fullName>
    <label>ODOMETER LIMIT - TO</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>