force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Part_No__c.field-meta.xml
<CustomField>
    <fullName>Part_No__c</fullName>
    <label>Part No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>