force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Vehicle Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>