force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 30th Dec 2020
Purpose: This field will show the product code of the product selected for the package item.</description>
    <formula>Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>