force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <formula>Quantity__c - Quantity_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>