force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Quantity_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Consumed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>