force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Service_Package_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by : Shashikant Bagale 
Created Date : 14/1/2020</description>
    <label>Service Package Item</label>
    <referenceTo>Service_Package_Item__c</referenceTo>
    <relationshipLabel>Vehicle Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>