force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/SpiTotal_Cost__c.field-meta.xml
<CustomField>
    <fullName>SpiTotal_Cost__c</fullName>
    <formula>SpiTotalUnitPrice__c + SpiTotal_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>