force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/SpiTotal_Tax__c.field-meta.xml
<CustomField>
    <fullName>SpiTotal_Tax__c</fullName>
    <formula>SpiUnitPrice__c * Quantity__c * Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>