force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/SpiTotalUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>SpiTotalUnitPrice__c</fullName>
    <formula>SpiUnitPrice__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>