force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/SpiUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>SpiUnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>