force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>