force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/SVC_OP_CD__c.field-meta.xml
<CustomField>
    <fullName>SVC_OP_CD__c</fullName>
    <label>FREE SERVICE OP CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>