force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Vehicle Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Service_Package_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>