force-app/main/default/objects/Vehicle_Service_Package_Item__c/fields/Vehicle_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Service Package</label>
    <referenceTo>VehicleServicePackage__c</referenceTo>
    <relationshipLabel>Vehicle Service Package Items</relationshipLabel>
    <relationshipName>Vehicle_Service_Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>