force-app/main/default/objects/Vehicle_Service_Package_Item__c/recordTypes/Part.recordType-meta.xml
<RecordType>
    <fullName>Part</fullName>
    <active>true</active>
    <label>Part</label>
</RecordType>